basic str of filter bar

--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -102,20 +102,91 @@
         <div class="col-sm-3">
             <div class="row"
                  style="padding: 0px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
-                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE; padding: 10px">
-EXAMINATION
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px; width: 100%"><b>EXAMINATION</b></div>
+                    <div style="padding-left: 20px;padding-right: 20px;padding-bottom: 20px">
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Mains<br/>
+                        </label>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Advanced<br/>
+                        </label>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;CBSE<br>
+                        </label>
+                    </div>
                 </div>
-                <div style="width: 100%;height: auto;padding: 10px;border-bottom: solid 2px #EEE">
-MEDIUM
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px; width: 100%"><b>SUBJECT</b></div>
+                    <div style="padding-left: 20px;padding-right: 20px;padding-bottom: 20px">
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Mathematics<br/>
+                        </label>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Physics<br>
+                        </label>
+                        <br>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Chemistry<br>
+                        </label>
+                    </div>
                 </div>
-                <div style="width: 100%;height: auto;padding: 10px;border-bottom: solid 2px #EEE">
-DIFFICULTY
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px; width: 100%"><b>CLASS</b></div>
+                    <div style="padding-left: 20px;padding-right: 20px;padding-bottom: 20px">
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XI<br/>
+                        </label>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XII<br>
+                        </label>
+                        <br>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XII +<br>
+                        </label>
+                    </div>
                 </div>
-                <div style="width: 100%;height: auto;padding: 10px;border-bottom: solid 2px #EEE">
-DURATION
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px; width: 100%"><b>DIFFICULTY</b></div>
+                    <div style="padding-left: 20px;padding-right: 20px;padding-bottom: 20px">
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Beginner<br/>
+                        </label>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Intermediate<br>
+                        </label>
+                        <br>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Advanced<br>
+                        </label>
+                    </div>
                 </div>
-                <div style="width: 100%;height: auto;padding: 10px">
-CATEGORY
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px; width: 100%"><b>DURATION</b></div>
+                    <div style="padding-left: 20px;padding-right: 20px;padding-bottom: 20px">
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Mains<br/>
+                        </label>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Advanced<br>
+                        </label>
+                        <br>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;CBSE<br>
+                        </label>
+                    </div>
+                </div>
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px; width: 100%"><b>MEDIUM</b></div>
+                    <div style="padding-left: 20px;padding-right: 20px;padding-bottom: 20px">
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;English<br/>
+                        </label>
+                        <label style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Hindi<br>
+                        </label>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -124,7 +195,7 @@ CATEGORY
         <div class="col-sm-9">
             <div class="row"
                  style="height: auto;background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem;margin-bottom: 30px; padding: 15px">
-                <div class="col-sm-1" style="color: #BBB; padding: 0;  align-self: center">
+                <div class="col-sm-1" style="color: #999; padding: 0;  align-self: center">
                     <b>FILTERS</b></div>
                 <div class="col-sm-11" style="padding: 0; padding-left: 15px">
 
@@ -163,7 +234,6 @@ CATEGORY
 </html>
 
 
-
 <!---->
 <!--<label class="">-->
 <!--<input type="checkbox"> JEE Mains<br/>-->
@@ -182,12 +252,12 @@ CATEGORY
 <!--<br><br>-->
 <!--<div>-->
 
-    <!--<input type="checkbox"> JEE Mains-->
-    <!--<br>-->
-    <!--<input type="checkbox"> JEE Advanced-->
-    <!--<br>-->
-    <!--<input type="checkbox"> CBSE-->
-    <!--<br>-->
+<!--<input type="checkbox"> JEE Mains-->
+<!--<br>-->
+<!--<input type="checkbox"> JEE Advanced-->
+<!--<br>-->
+<!--<input type="checkbox"> CBSE-->
+<!--<br>-->
 <!--</div>-->
 <!--<br>-->
 <!--&lt;!&ndash;M3-->
