--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -134,93 +134,15 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="row"
-                 style="padding: 20px;margin-bottom: 30px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
+                 style="padding: 20px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
 
             </div>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-sm-3">
-            <div class="row"
-                 style="padding: 20px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
-                EXAMINATION
-
-                <!---->
-                <!--<label class="">-->
-                <!--<input type="checkbox"> JEE Mains<br/>-->
-                <!--</label>-->
-                <!--<label class="">-->
-                <!--<input type="checkbox"> JEE Advanced<br>-->
-                <!--</label>-->
-                <!--<br>-->
-                <!--<label class="">-->
-                <!--<input type="checkbox"> CBSE<br>-->
-                <!--</label>-->
-
-
-                <!--M2-->
-
-
-                <!--<div>-->
-                <!---->
-                <!--<input type="checkbox"> JEE Mains-->
-                <!--<br>-->
-                <!--<input type="checkbox"> JEE Advanced-->
-                <!--<br>-->
-                <!--<input type="checkbox"> CBSE-->
-                <!--<br>-->
-                <!--</div>-->
-
-
-                <!--M3
--                    I prefer this method the most
--
--                -->
-
-
-                <!--<div class="form-check">-->
-                <!--<label class="form-check-label">-->
-                <!--<input type="checkbox"> JEE Mains<br/>-->
-                <!--</label>-->
-                <!--<label class="form-check-label">-->
-                <!--<input type="checkbox"> JEE Advanced<br>-->
-                <!--</label>-->
-                <!--<br>-->
-                <!--<label class="form-check-label">-->
-                <!--<input type="checkbox"> CBSE<br>-->
-                <!--</label>-->
-                <!--</div>-->
-
-                <!--M4-->
-
-                <!--<div class="form-check">-->
-                <!--<label class="form-check-label">-->
-                <!--<input class="form-check-input" type="checkbox"> JEE Mains<br/>-->
-                <!--</label>-->
-                <!--<label class="form-check-label">-->
-                <!--<input class="form-check-input" type="checkbox"> JEE Advanced<br>-->
-                <!--</label>-->
-                <!--<br>-->
-                <!--<label class="form-check-label">-->
-                <!--<input class="form-check-input" type="checkbox"> CBSE<br>-->
-                <!--</label>-->
-                <!--</div>-->
-                <label class="">
-                    <input type="checkbox"> JEE Mains<br>
-                </label>
-                <br>
-                <label class="">
-                    <input type="checkbox"> JEE Advanced<br>
-                </label>
-                <br>
-                <label class="">
-                    <input type="checkbox"> CBSE<br>
-                </label>
-
-            </div>
-        </div>
         <div class="col-sm-9">
+            <p><b>Lectures</b></p>
             <div class="row"
                  style="height: auto;background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem;margin-bottom: 30px; padding: 15px">
                 <div class="col-sm-1" style="color: #BBB; padding: 0; padding-left: 15px; align-self: center">
@@ -252,6 +174,22 @@
             <div class="row"
                  style="background-color: white; height: 750px;box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem">
 
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <p><b>Teacher</b></p>
+            <div class="row"
+                 style="padding: 20px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
+            </div>
+
+            <p><b>Reviews</b></p>
+            <div class="row"
+                 style="padding: 20px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
+            </div>
+
+            <p><b>Doubts</b></p>
+            <div class="row"
+                 style="padding: 20px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
             </div>
         </div>
     </div>
