--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -104,15 +104,28 @@
                  style="padding: 0px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
                 <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
                     <div style="padding: 20px; width: 100%"><b>EXAMINATION</b></div>
-                    <div style="padding-left: 20px;padding-right: 20px;padding-bottom: 20px">
-                        <label style="color: #999">
-                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Mains<br/>
+                    <!--<div style="padding-left: 20px;padding-right: 20px;padding-bottom: 20px">-->
+                        <!--<label style="color: #999">-->
+                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Mains<br/>-->
+                        <!--</label>-->
+                        <!--<label style="color: #999">-->
+                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Advanced<br/>-->
+                        <!--</label>-->
+                        <!--<label style="color: #999">-->
+                            <!--<input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;CBSE<br>-->
+                        <!--</label>-->
+                    <!--</div>-->
+                    <div class="form-check">
+                        <label class="form-check-label" style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Mains
                         </label>
-                        <label style="color: #999">
-                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Advanced<br/>
+                        <br>
+                        <label class="form-check-label" style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Advanced
                         </label>
-                        <label style="color: #999">
-                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;CBSE<br>
+                        <br>
+                        <label class="form-check-label" style="color: #999">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;CBSE
                         </label>
                     </div>
                 </div>
