basic str of filter bar

--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -111,6 +111,7 @@
                         <label style="color: #999">
                             <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Advanced<br/>
                         </label>
+                        <br>
                         <label style="color: #999">
                             <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;CBSE<br>
                         </label>
@@ -122,6 +123,7 @@
                         <label style="color: #999">
                             <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Mathematics<br/>
                         </label>
+                        <br>
                         <label style="color: #999">
                             <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Physics<br>
                         </label>
@@ -261,9 +263,9 @@
 <!--</div>-->
 <!--<br>-->
 <!--&lt;!&ndash;M3-->
--                    I prefer this method the most
--
--                -->
+<!-- -                    I prefer this method the most-->
+<!-- - -->
+<!-- -                &ndash;&gt;-->
 
 
 <!--<div class="form-check">-->
