--- a/public_html/allMinicourses/index.html
+++ b/public_html/allMinicourses/index.html
@@ -103,7 +103,8 @@
             <div class="row"
                  style="padding: 0px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
                 <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
-                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px;width: 100%"><b>EXAMINATION</b></div>
+                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px;width: 100%"><b>EXAMINATION</b>
+                    </div>
                     <div style="padding-left: 30px;padding-right: 20px;padding-bottom: 13px">
                         <label style="color: #888">
                             <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Mains<br/>
@@ -120,7 +121,8 @@
 
                 </div>
                 <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
-                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px; width: 100%; color: black"><b>SUBJECT</b></div>
+                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px; width: 100%; color: black"><b>SUBJECT</b>
+                    </div>
                     <div style="padding-left: 30px;padding-right: 20px;padding-bottom: 13px">
                         <label class="label-style">
                             <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Mathematics<br/>
@@ -152,7 +154,8 @@
                     </div>
                 </div>
                 <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
-                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px;width: 100%"><b>DIFFICULTY</b></div>
+                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px;width: 100%"><b>DIFFICULTY</b>
+                    </div>
                     <div style="padding-left: 30px;padding-right: 20px;padding-bottom: 13px">
                         <label class="label-style">
                             <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Beginner<br/>
@@ -168,7 +171,8 @@
                     </div>
                 </div>
                 <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
-                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px;width: 100%"><b>DURATION</b></div>
+                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px;width: 100%"><b>DURATION</b>
+                    </div>
                     <div style="padding-left: 30px;padding-right: 30px;padding-bottom: 13px; height: 45px">
                         <label class="label-style" style="width: 100%">
                             <input type="range" min="0" max="120" style="width: 100%">&nbsp;&nbsp;&nbsp;&nbsp;<br/>
@@ -193,7 +197,7 @@
 
 
         <div class="col-sm-9">
-                <div class="row"
+            <div class="row"
                  style="height: auto;background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem;margin-bottom: 30px; padding: 15px; padding-left: 20px">
                 <div class="col-sm-1" style="color: #999; padding: 0;  align-self: center">
                     <b>FILTERS</b></div>
@@ -222,8 +226,12 @@
                 </div>
             </div>
             <div class="row"
-                 style="background-color: white; height: 750px;box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem">
-
+                 style="background-color: white; height: auto;box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
+                <div style="width: 100%; height: 250px; padding: 20px; border-bottom: solid 2px #EEE"></div>
+                <div style="width: 100%; height: 250px; padding: 20px; border-bottom: solid 2px #EEE"></div>
+                <div style="width: 100%; height: 250px; padding: 20px; border-bottom: solid 2px #EEE"></div>
+                <div style="width: 100%; height: 250px; padding: 20px; border-bottom: solid 2px #EEE"></div>
+                <div style="width: 100%; height: 250px; padding: 20px; border-bottom: solid 2px #EEE"></div>
             </div>
         </div>
     </div>
