--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 hey this is a lesson
+
+<script>
+    window.location.replace('http://localhost:4000/catalouge');
+</script>
 </body>
 </html>
