Minicourse Page Update

--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -72,9 +72,9 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-xs-12 col-sm-6 offset-3 text-center">
-                    <h1 style="color: floralwhite" id="miniCourseName">Library</h1>
+                    <h1 style="color: floralwhite" id="miniCourseName"></h1>
                     <br>
-                    <p style="color: floralwhite; font-size: x-large">Browse our collection of courses created by the
+                    <p id="miniCourseDescription" style="color: floralwhite; font-size: x-large">Browse our collection of courses created by the
                         best teachers of India</p>
 
                 </div>
