--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -2,13 +2,348 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>MathonGo Library</title>
+
+    <link rel="stylesheet" href="/css/bootstrap.css">
+
+    <link rel="stylesheet" href="/library/index.css">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <script src="/js/jquery-3.2.1.js"></script>
+    <script src="/js/tether.js"></script>
+    <script src="/js/bootstrap.js"></script>
+
+
+    <script >
+        console.log("heelooo");
+    </script>
+    <script>
+
+        let logoutfn = function () {
+
+            $.get('http://localhost:4000/logout', function (student) {
+                console.log(student);
+                window.location.replace(student);
+            });
+        }
+    </script>
 </head>
 <body>
-hey this is a lesson
+<!--just to check-->
+<div class="container-fluid">
 
-<script>
-    window.location.replace('http://localhost:4000/catalouge');
-</script>
+    <div class="row no-gutters align-content-center headerbar" id="headerbar"
+         style="height: auto; padding-top: 10px; padding-bottom: 10px">
+        <div class="col-sm-2 col-12">
+            <img src="./../images/logo.png" style="height: 40px; padding-left: 30px">
+        </div>
+        <div class="col-sm-3 offset-2 col-12">
+            <!--empty for search text box later-->
+        </div>
+        <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
+                class="header-links align-middle" style="text-align: center; color: #999" href="#">Library</a></div>
+        <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
+                class="align-middle header-links" style="text-align: center; color: #999" href="#">Events</a></div>
+        <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
+                class="align-middle header-links" style="text-align: center; color: #999" href="#">Teachers</a></div>
+
+
+        <div class="dropdown col-sm-2 col-12 align-middle" style=" padding-top: 5px; padding-bottom: 5px">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- <a href="#"><i class="fa fa-bell"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;-->
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color: #222;" href="#" class="dropdown-toggle header-links "
+                                             data-toggle="dropdown"
+                                             role="button" aria-haspopup="true" aria-expanded="false"><img
+                src="./../images/boy.png" style="height: 30px; border-radius: 50%; border: solid 1px gray"
+                class="img-circle">
+            &nbsp;&nbsp;John Doe <span class="caret"></span></a>
+            <ul class="dropdown-menu"
+                style="padding: 0; margin-top:10px; border: none; border-radius: 0;border-bottom-right-radius: .25rem;border-bottom-left-radius: .25rem;background-color: #FFF">
+                <li style="padding: 10px ;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666"
+                                                                                                href="#"
+                                                                                                class="header-links">My
+                    Courses</a></li>
+                <li style="padding: 10px;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666"
+                                                                                               href="#"
+                                                                                               class="header-links">My
+                    Bookmarks</a></li>
+                <li style="padding: 10px;padding-left: 20px;">
+                    <a onclick="logoutfn()" style="color: #666" class="header-links">Logout</a>
+                </li>
+            </ul>
+        </div>
+        <!--<div class="col-sm-6 text-right">-->
+
+        <!--<span id="userName" class="align-middle text-uppercase"></span>-->
+        <!--<a id="logout" onclick="logoutfn()"><i data-toggle="tooltip" title="Logout" data-placement="bottom"-->
+        <!--style="color: #555"-->
+        <!--class="fa fa-sign-out fa-2x align-middle"></i></a>-->
+        <!--</div>-->
+
+    </div>
+    <header class="jumbotron" style=" margin-bottom: 0; background-image: url(./../images/bg.jpg)">
+
+        <!-- Main component for a primary marketing message or call to action -->
+
+        <div class="container">
+            <div class="row row-header">
+                <div class="col-xs-12 col-sm-6 offset-3 text-center">
+                    <h1 style="color: floralwhite">Library</h1>
+                    <br>
+                    <p style="color: floralwhite; font-size: x-large">Browse our collection of courses created by the
+                        best teachers of India</p>
+
+                </div>
+            </div>
+        </div>
+    </header>
+
+</div>
+<div class="container" style="margin-top: 30px">
+
+    <div class="row">
+        <div class="col-sm-3">
+            <div class="row"
+                 style="padding: 0px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px;width: 100%"><b>EXAMINATION</b>
+                    </div>
+                    <div style="padding-left: 30px;padding-right: 20px;padding-bottom: 13px">
+                        <label style="color: #888">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Mains<br/>
+                        </label>
+                        <br>
+                        <label style="color: #888">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;JEE Advanced<br/>
+                        </label>
+                        <br>
+                        <label style="color: #888">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;CBSE<br>
+                        </label>
+                    </div>
+
+                </div>
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px; width: 100%; color: black"><b>SUBJECT</b>
+                    </div>
+                    <div style="padding-left: 30px;padding-right: 20px;padding-bottom: 13px">
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Mathematics<br/>
+                        </label>
+                        <br>
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Physics<br>
+                        </label>
+                        <br>
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Chemistry<br>
+                        </label>
+                    </div>
+                </div>
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px;width: 100%"><b>CLASS</b></div>
+                    <div style="padding-left: 30px;padding-right: 20px;padding-bottom: 13px">
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XI<br/>
+                        </label>
+                        <br>
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XII<br>
+                        </label>
+                        <br>
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;XII +<br>
+                        </label>
+                    </div>
+                </div>
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px;width: 100%"><b>DIFFICULTY</b>
+                    </div>
+                    <div style="padding-left: 30px;padding-right: 20px;padding-bottom: 13px">
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Beginner<br/>
+                        </label>
+                        <br>
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Intermediate<br>
+                        </label>
+                        <br>
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Advanced<br>
+                        </label>
+                    </div>
+                </div>
+                <!--<div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">-->
+                <!--<div style="padding: 20px;padding-bottom: 15px; padding-left: 30px;width: 100%"><b>DURATION</b>-->
+                <!--</div>-->
+                <!--<div style="padding-left: 30px;padding-right: 30px;padding-bottom: 13px; height: 45px">-->
+                <!--<label class="label-style" style="width: 100%">-->
+                <!--<input type="range" min="0" max="120" style="width: 100%">&nbsp;&nbsp;&nbsp;&nbsp;<br/>-->
+                <!--</label>-->
+                <!--</div>-->
+                <!--</div>-->
+                <div style="width: 100%;height: auto;border-bottom: solid 2px #EEE;">
+                    <div style="padding: 20px;padding-bottom: 15px; padding-left: 30px; width: 100%"><b>MEDIUM</b></div>
+                    <div style="padding-left: 30px;padding-right: 20px;padding-bottom: 13px">
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;English<br/>
+                        </label>
+                        <br>
+                        <label class="label-style">
+                            <input type="checkbox">&nbsp;&nbsp;&nbsp;&nbsp;Hindi<br>
+                        </label>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-sm-9">
+            <div class="row"
+                 style="height: auto;background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .25rem;margin-bottom: 30px; padding: 15px; padding-left: 20px">
+                <div class="col-sm-1" style="color: #999; padding: 0;  align-self: center">
+                    <b>FILTERS</b></div>
+                <div class="col-sm-11" style="padding: 0; padding-left: 15px">
+
+                    <ul style="list-style-type: none; margin: 0; padding: 0">
+
+                        <li style="float:left; margin: 5px; height:auto;"><span
+                                style="width: 100%; height: 100%; background-color:#0164FF; color: white; padding: 5px; border-radius: .125rem; padding-left: 8px; padding-right: 8px">Physics</span>
+                        </li>
+                        <li style="float:left; margin: 5px; height:auto;"><span
+                                style="width: 100%; height: 100%; background-color:#0164FF; color: white; padding: 5px; border-radius: .125rem; padding-left: 8px; padding-right: 8px">JEE Mains</span>
+                        </li>
+                        <li style="float:left; margin: 5px; height:auto;"><span
+                                style="width: 100%; height: 100%; background-color:#0164FF; color: white; padding: 5px; border-radius: .125rem; padding-left: 8px; padding-right: 8px">Class 12th</span>
+                        </li>
+                        <li style="float:left; margin: 5px; height:auto;"><span
+                                style="width: 100%; height: 100%; background-color:#0164FF; color: white; padding: 5px; border-radius: .125rem; padding-left: 8px; padding-right: 8px">Advanced</span>
+                        </li>
+                        <li style="float:left; margin: 5px; height:auto;"><span
+                                style="width: 100%; height: 100%; background-color:#0164FF; color: white; padding: 5px; border-radius: .125rem; padding-left: 8px; padding-right: 8px">Motion in 1D</span>
+                        </li>
+
+
+                    </ul>
+                </div>
+            </div>
+            <div class="row"
+                 style="background-color: white; height: auto;box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
+                <div style="width: 100%; height: auto; padding: 20px; border-bottom: solid 2px #EEE">
+                    <div style="width: 100%;height: auto" class="row">
+                        <div class="col-sm-4" style="padding: 0"><img src="./../images/cover.jpg" style="width: 100%; height: 190px; border-radius: .25rem"></div>
+                        <div class="col-sm-8" style="padding-right: 0px; padding-left: 20px; padding-top: 12px">
+                            <div class="row" style="width: 100%; color: #888; font-size: 14px; margin-bottom: 3px"> PHYSICS&nbsp;&nbsp; >&nbsp;&nbsp;Motion In a Straight Line</div>
+                            <div class="row" style="font-size: 22px;font-weight: 500; margin-bottom: 5px">Free Fall</div>
+
+                            <div class="row" style="color: #AAA"><p style="font-size: 14px">some textsome textsome textsome textsome textsome text
+                                some textsome textsome textsome textsome textsome text</p></div>
+                            <div class="row align-items-center" ><a href="#" class="enrol-style" style="border-radius: 100px; background-color: #4bca81; padding:10px 45px;width: auto; color: white; font-size: 12px; font-weight: 700">ENROLL</a></div>
+
+                        </div>
+                    </div>
+                    <div class="row" style="width: 100%;height: auto; padding-top: 20px">
+                        <div style="width: auto">
+                            <div class="row" style="color: #000; width: auto; font-weight: 300">
+                                <b>DURATION</b>
+                            </div>
+                            <div class="row" style="color: #AAA; width: auto; font-size: 13px">
+                                45 Minutes
+                            </div>
+                        </div>
+                        <div style="width: auto"></div>
+                        <div style="width: auto"></div>
+                        <div style="width: auto"></div>
+                    </div>
+
+
+
+
+                </div>
+                <div style="width: 100%; height: 250px; padding: 20px; border-bottom: solid 2px #EEE"></div>
+                <div style="width: 100%; height: 250px; padding: 20px; border-bottom: solid 2px #EEE"></div>
+                <div style="width: 100%; height: 250px; padding: 20px; border-bottom: solid 2px #EEE"></div>
+                <div style="width: 100%; height: 250px; padding: 20px; border-bottom: solid 2px #EEE"></div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<br><br><br><br><br><br><br>
+<script src="index.js"></script>
 </body>
 </html>
+
+
+<!---->
+<!--<label class="">-->
+<!--<input type="checkbox"> JEE Mains<br/>-->
+<!--</label>-->
+<!--<label class="">-->
+<!--<input type="checkbox"> JEE Advanced<br>-->
+<!--</label>-->
+<!--<br>-->
+<!--<label class="">-->
+<!--<input type="checkbox"> CBSE<br>-->
+<!--</label>-->
+
+
+<!--M2-->
+
+<!--<br><br>-->
+<!--<div>-->
+
+<!--<input type="checkbox"> JEE Mains-->
+<!--<br>-->
+<!--<input type="checkbox"> JEE Advanced-->
+<!--<br>-->
+<!--<input type="checkbox"> CBSE-->
+<!--<br>-->
+<!--</div>-->
+<!--<br>-->
+<!--&lt;!&ndash;M3-->
+<!-- -                    I prefer this method the most-->
+<!-- - -->
+<!-- -                &ndash;&gt;-->
+
+
+<!--<div class="form-check">-->
+<!--<label class="form-check-label">-->
+<!--<input type="checkbox"> JEE Mains<br/>-->
+<!--</label>-->
+<!--<label class="form-check-label">-->
+<!--<input type="checkbox"> JEE Advanced<br>-->
+<!--</label>-->
+<!--<br>-->
+<!--<label class="form-check-label">-->
+<!--<input type="checkbox"> CBSE<br>-->
+<!--</label>-->
+<!--</div>-->
+
+<!--M4-->
+
+<!--<div class="form-check">-->
+<!--<label class="form-check-label ">-->
+<!--<input type="checkbox"> JEE Mains<br/>-->
+<!--</label>-->
+<!--<label class="form-check-label">-->
+<!--<input type="checkbox"> JEE Advanced<br>-->
+<!--</label>-->
+<!--<br>-->
+<!--<label class="form-check-label">-->
+<!--<input type="checkbox"> CBSE<br>-->
+<!--</label>-->
+<!--</div>-->
+<!--<label class="">-->
+<!--<input type="checkbox"> JEE Mains<br>-->
+<!--</label>-->
+<!--<br>-->
+<!--<label class="">-->
+<!--<input type="checkbox"> JEE Advanced<br>-->
+<!--</label>-->
+<!--<br>-->
+<!--<label class="">-->
+<!--<input type="checkbox"> CBSE<br>-->
+<!--</label>-->
