--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -2,13 +2,141 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lesson</title>
+    <link rel="stylesheet" href="/css/bootstrap.css">
+
+    <link rel="stylesheet" href="./index.css">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <script src="/js/jquery-3.2.1.js"></script>
+    <script src="/js/tether.js"></script>
+    <script src="/js/bootstrap.js"></script>
+
+    <script src="./index.js"></script>
 </head>
 <body>
-hey this is a lesson
+<div class="container-fluid">
 
-<script>
+    <div class="row no-gutters align-content-center headerbar" id="headerbar"
+         style="height: auto; padding-top: 10px; padding-bottom: 10px">
+        <div class="col-sm-2 col-12">
+            <img src="/images/logo.png" style="height: 40px; padding-left: 30px">
+        </div>
+        <div class="col-sm-3 offset-2 col-12">
+            <!--empty for search text box later-->
+        </div>
+        <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
+                class="header-links align-middle" style="text-align: center; color: #999" href="#">Library</a></div>
+        <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
+                class="align-middle header-links" style="text-align: center; color: #999" href="#">Events</a></div>
+        <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
+                class="align-middle header-links" style="text-align: center; color: #999" href="#">Teachers</a></div>
 
-</script>
+
+        <div class="dropdown col-sm-2 col-12 align-middle" style=" padding-top: 5px; padding-bottom: 5px">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- <a href="#"><i class="fa fa-bell"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;-->
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color: #222;" href="#" class="dropdown-toggle header-links "
+                                             data-toggle="dropdown"
+                                             role="button" aria-haspopup="true" aria-expanded="false"><img
+                src="/images/boy.png" style="height: 30px; border-radius: 50%; border: solid 1px gray"
+                class="img-circle">
+            &nbsp;&nbsp;John Doe <span class="caret"></span></a>
+            <ul class="dropdown-menu"
+                style="padding: 0; margin-top:10px; border: none; border-radius: 0;border-bottom-right-radius: .25rem;border-bottom-left-radius: .25rem;background-color: #FFF">
+                <li style="padding: 10px ;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666"
+                                                                                                href="#"
+                                                                                                class="header-links">My
+                    Courses</a></li>
+                <li style="padding: 10px;padding-left: 20px; border-bottom: solid 1px #DDD"><a style="color: #666"
+                                                                                               href="#"
+                                                                                               class="header-links">My
+                    Bookmarks</a></li>
+                <li style="padding: 10px;padding-left: 20px;"><a onclick="logoutfn()" style="color: #666"
+                                                                 class="header-links">Logout</a>
+                </li>
+            </ul>
+        </div>
+        <!--<div class="col-sm-6 text-right">-->
+
+        <!--<span id="userName" class="align-middle text-uppercase"></span>-->
+        <!--<a id="logout" onclick="logoutfn()"><i data-toggle="tooltip" title="Logout" data-placement="bottom"-->
+        <!--style="color: #555"-->
+        <!--class="fa fa-sign-out fa-2x align-middle"></i></a>-->
+        <!--</div>-->
+
+    </div>
+
+</div>
+
+<div class="container" style="margin-top: 30px">
+
+
+    <div class="row">
+        <div class="col-sm-4">
+            <div id="lessons" class="row"
+                 style="background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem; margin-bottom: 30px">
+                <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
+                    <h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">Functions<br></h5>
+                    <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
+                        <span style="margin-top: 5px; font-weight: 500">5 Lectures</span>&nbsp;&nbsp;
+                        <span style="margin-top: 5px; font-weight: 500">45 min</span>
+                    </p>
+                </div>
+
+                <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
+                    <h5 style="font-size: 18px;margin-bottom: 7px;font-weight: 500;color: #A4A5A9">1. Functions<br></h5>
+
+                </div>
+
+
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <div class="row"
+                 style="background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
+                <div class="col-sm-12 embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/a9GiapCfL_w"
+                            allowfullscreen></iframe>
+                </div>
+
+                <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
+
+                    <h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>
+                    <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
+                        <img src="/images/icons/timer.png">&nbsp;<span
+                            style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;
+                        <img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"
+                                                                     style="margin-top: 5px; font-weight: 500">12K</span>
+                    </p>
+                    <br>
+                    <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
+                        HELoooooooooooo
+                    </p>
+
+                </div>
+
+                <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
+                    <div class="row" style="margin-bottom: 0px">
+                        <div class="col-sm-12">
+                            <p><b>Teacher</b></p></div>
+                        <div class="col-sm-2">
+                            <img id="teacherImage" alt="Tutor Image" src="/images/icons/tutor.png">
+                        </div>
+                        <div class="col-sm-10">
+                            <p style="color: #848589;font-size: 14px;" id="nameOfTheTeacher"><b>Anup Sir</b><br>
+                            HElloooooo</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+</div>
+
 </body>
+
 </html>
