--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -77,17 +77,17 @@
             <div id="lessons" class="row"
                  style="background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem; margin-bottom: 30px">
                 <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
-                    <h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">Functions<br></h5>
+                    <h5 id="miniCourseName" style=";margin-bottom: 7px; color: #444; font-weight: 500"><br></h5>
                     <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
-                        <span style="margin-top: 5px; font-weight: 500">5 Lectures</span>&nbsp;&nbsp;
-                        <span style="margin-top: 5px; font-weight: 500">45 min</span>
+                        <span id="noOfLessons" style="margin-top: 5px; font-weight: 500"></span>&nbsp;&nbsp;
+                        <span id="miniCourseDuration" style="margin-top: 5px; font-weight: 500"></span>
                     </p>
                 </div>
 
-                <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
-                    <h5 style="font-size: 18px;margin-bottom: 7px;font-weight: 500;color: #A4A5A9">1. Functions<br></h5>
+                <!--<div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">-->
+                    <!--<h5 style="font-size: 18px;margin-bottom: 7px;font-weight: 500;color: #A4A5A9">1. Functions<br></h5>-->
 
-                </div>
+                <!--</div>-->
 
 
             </div>
@@ -102,16 +102,16 @@
 
                 <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
 
-                    <h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>
+                    <h5 id="nameOfTheMiniCourse" style=";margin-bottom: 7px; color: #444; font-weight: 500"><br></h5>
                     <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
-                        <img src="/images/icons/timer.png">&nbsp;<span
-                            style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;
+                        <img src="/images/icons/timer.png">&nbsp;<span id="durationOfMiniCourse"
+                            style="margin-top: 5px; font-weight: 500"></span>&nbsp;&nbsp;
                         <img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"
-                                                                     style="margin-top: 5px; font-weight: 500">12K</span>
+                                                                     style="margin-top: 5px; font-weight: 500"></span>
                     </p>
                     <br>
-                    <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
-                        HELoooooooooooo
+                    <p id="lessonDescription" style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
+
                     </p>
 
                 </div>
@@ -124,8 +124,8 @@
                             <img id="teacherImage" alt="Tutor Image" src="/images/icons/tutor.png">
                         </div>
                         <div class="col-sm-10">
-                            <p style="color: #848589;font-size: 14px;" id="nameOfTheTeacher"><b>Anup Sir</b><br>
-                            HElloooooo</p>
+                            <p style="color: #848589;font-size: 14px;"><b><span id="nameOfTheTeacher"></span></b><br>
+                            <span id="teacherDescription"></span></p>
                         </div>
                     </div>
                 </div>
