--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -17,7 +17,7 @@
 <div class="container-fluid">
 
     <div class="row no-gutters align-content-center headerbar" id="headerbar"
-         style="height: auto; padding-top: 10px; padding-bottom: 10px">
+         style="height: auto; padding-top: 10px; padding-bottom: 10px;margin-bottom: 0px">
         <div class="col-sm-2 col-12">
             <img src="/images/logo.png" style="height: 40px; padding-left: 30px">
         </div>
