my courses and y bookmarks

--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="container-fluid">
 
-    <div class="row no-gutters align-content-center headerbar" id="headerbar"
+    <div class="row no-gutters align-content-center header-bar" id="headerbar"
          style="height: auto; padding-top: 10px; padding-bottom: 10px">
         <div class="col-sm-2 col-12">
             <img src="/images/logo.png" style="height: 40px; padding-left: 30px">
@@ -129,7 +129,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" style="margin-top: 35px;">
         <div class="col-sm-9">
             <p><b>Lectures</b></p>
             <div>
@@ -217,7 +217,7 @@
             <!--</div>-->
 
             <!--<p><b>Doubts</b></p>-->
-            <!--<div class="row"-->
+            <!--<div clas   s="row"-->
                  <!--style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">-->
             <!--</div>-->
         </div>
