--- a/public_html/admin/index.html
+++ b/public_html/admin/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Admin Page - MathonGo</title>
 </head>
 <body>
+
+
 
 </body>
 </html>
