--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -228,7 +228,7 @@
 <!--<script src="./../js/jquery-3.2.1.js"></script>-->
 
 <!--<script src="./../js/bootstrap.js"></script>-->
-<!--<script src="./index.js"></script>-->
+<!--<script src="./library.js"></script>-->
 </body>
 
 </html>
