--- a/public_html/student/mycourses/index.html
+++ b/public_html/student/mycourses/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>My Courses</title>
 
-    <link rel="stylesheet" href="../../css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
 
     <link rel="stylesheet" href="index.css">
-    <link href="../../font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <script src="../../js/jquery-3.2.1.js"></script>
-    <script src="../../js/tether.js"></script>
-    <script src="../../js/bootstrap.js"></script>
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <script src="/js/jquery-3.2.1.js"></script>
+    <script src="/js/tether.js"></script>
+    <script src="/js/bootstrap.js"></script>
 
     <script>
 
@@ -30,7 +30,7 @@
 
     <div class="row no-gutters align-content-center header-bar" id="header-bar">
         <div class="col-sm-2 col-12">
-            <img src="../../images/logo.png" class="header-logo">
+            <img src="/images/logo.png" class="header-logo">
         </div>
         <div class="col-sm-3 offset-2 col-12">
             <!--empty for search text box later-->
@@ -49,7 +49,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color: #222;" href="#" class="dropdown-toggle header-links"
                                              data-toggle="dropdown"
                                              role="button" aria-haspopup="true" aria-expanded="false">
-            <img src="../../images/boy.png" class="img-circle header-profile-img">
+            <img src="/images/boy.png" class="img-circle header-profile-img">
             &nbsp;&nbsp;<span>John Doe</span> <span class="caret"></span></a>
             <ul class="dropdown-menu header-dropdown-menu">
                 <li class="header-dropdown-menu-li"><a href="#" class="header-links">My Courses</a></li>
@@ -174,7 +174,7 @@
                     <li>
                         <div class="minicourses-list-li">
                             <div class="row minicourse-div">
-                                <div class="col-sm-4" style="padding: 0"><img src="../../images/cover.jpg" class="minicourse-img"></div>
+                                <div class="col-sm-4" style="padding: 0"><img src="/images/cover.jpg" class="minicourse-img"></div>
                                 <div class="col-sm-8 minicourse-content">
                                     <div class="row minicourse-chps"><span>PHYSICS</span>&nbsp;&nbsp; >&nbsp;&nbsp;<span>Motion In a Straight Line</span></div>
                                     <div class="row minicourse-title"><span>Free Fall</span></div>
