--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -95,12 +95,12 @@
                     <span id="teacherName"></span>
                 </div>
                 <div class="col text-center">
-                    <p><b>RATINGS</b></p>
-                    <span id="ratings"></span>
+                    <p><b>SUBJECT</b></p>
+                    <span id="subject"></span>
                 </div>
                 <div class="col text-center">
-                    <p><b>REVIEWS</b></p>
-                    <span id="noOfReviews"></span>
+                    <p><b>CLASS</b></p>
+                    <span id="className"></span>
                 </div>
                 <div class="col text-center">
                     <p><b>DURATION</b></p>
