--- a/public_html/admin/index.html
+++ b/public_html/admin/index.html
@@ -71,8 +71,9 @@ Add a Minicourse
 
     <h3>Add Lessons To The Minicourse</h3>
 
-    <button id="add-lesson-btn">Add a lesson to this minicourse</button>
-
+    <a style="background-color: #00C2FA; color: whitesmoke; cursor: pointer; padding: 15px" id="add-lesson-btn">Add a lesson to this minicourse</a>
+<br>
+    <br>
     <ul id="lessons-add">
 
     </ul>
