--- a/public_html/admin/index.html
+++ b/public_html/admin/index.html
@@ -81,7 +81,7 @@ Add a Minicourse
 
 
 
-    <input type="submit" value="Create the Minicourse with lessons">
+    <a style="background-color: seagreen; color: whitesmoke; cursor: pointer; padding: 15px" id="submit">Create the Minicourse with lessons</a>
 
 </form>
 
