--- a/public_html/index.html
+++ b/public_html/index.html
@@ -109,6 +109,9 @@
                                     </div>
                                     <div id="errorLogin" class="text-danger">
                                     </div>
+                                    <div id="error" class="text-danger">
+
+                                    </div>
                                     <div class="form-group">
                                         <button id="loginButton" class="btn btn-info btn-block btn-lg btn-style">Login</button>
                                     </div>
