--- a/public_html/students/mycourses/index.html
+++ b/public_html/students/mycourses/index.html
@@ -46,11 +46,11 @@
         <div class="dropdown col-sm-2 col-12 align-middle header-dropdown">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <!-- <a href="#"><i class="fa fa-bell"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;-->
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color: #222;" href="#" class="dropdown-toggle header-links"
+            &nbsp;&nbsp;&nbsp;&nbsp;<a style="color: #222;" href="#" class="dropdown-toggle header-links"
                                              data-toggle="dropdown"
                                              role="button" aria-haspopup="true" aria-expanded="false">
             <img src="/images/boy.png" class="img-circle header-profile-img">
-            &nbsp;&nbsp;<span>John Doe</span> <span class="caret"></span></a>
+            <span id="name"></span> <span class="caret"></span></a>
             <ul class="dropdown-menu header-dropdown-menu">
                 <li class="header-dropdown-menu-li"><a href="http://localhost:4000/student/mycourses" class="header-links">My Courses</a></li>
                 <li class="header-dropdown-menu-li"><a href="http://localhost:4000/student/mybookmarks" class="header-links">My Bookmarks</a></li>
